@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.784 2011-09-07 19:14:10 fyurisich Exp $
+ * $Id: ChangeLog,v 1.785 2011-09-07 21:54:23 fyurisich Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
@@ -7,6 +7,13 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+
+2011-09-07 19:00:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
+  * source/winprint.prg
+  * source/h_tab.prg
+  * source/c_windows.prg
+  * source/c_image.prg
+    ! Fixed some C compiler warnings.
 
 2011-09-07 16:05:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/common_make.bat
